# image-metadata-recorder

./: README.md  pyproject.toml  requirements.txt
image_metadata_recorder/: analyzer.py  cli.py  extractor.py  reporter.py
image_metadata_recorder/extractors/: __init__.py  czi_extractor.py  tiff_extractor.py
image_metadata_recorder/processors/: standard_processor.py
image_metadata_recorder/reporters/: keypath_util.py  markdown_reporter.py  structure_reporter.py
image_metadata_recorder/workflow/: context.py  workflow.py
